<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AccountActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageViewProfilePic"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:contentDescription="@string/account_profile_pic_description"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_account"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewProfilePic"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUsername"
        android:layout_marginTop="8dp"
        android:text="@string/email_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEmail"
        android:layout_marginTop="8dp"
        android:text="@string/phone_text"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEmail"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="103dp"
        android:elevation="23dp"
        android:text="@string/sign_out"
        app:cornerRadius="@dimen/car_ui_padding_3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="19dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
