<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/emailTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:clickable="true"
        android:gravity="bottom"
        android:layout_marginStart="2dp"
        android:text="@string/email_text"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/passwordTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="2dp"
        android:gravity="bottom"
        android:text="@string/password_text"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTitleTextView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitleTextView" />

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:focusable="true"
        android:text="@string/no_account"
        android:textColor="@color/purple_700"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:elevation="4dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="@color/orange"
        app:cornerRadius="@dimen/car_ui_padding_3"
        android:text="@string/login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAccountTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>