<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeCardView"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_image"
            android:contentDescription="@string/product_image_description"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productImage"
            android:layout_marginTop="8dp"
            android:text="@string/product_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productName"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/product_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FBB503"
            android:textSize="26sp" />


        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productPrice"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/product_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8F8F84"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_to_cart"
            app:cornerRadius="@dimen/car_ui_padding_3"
            android:layout_below="@id/productDescription"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
