<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cartCardView"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp">

        <ImageView
            android:id="@+id/productCartImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_image"
            android:scaleType="centerCrop"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/productCartName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productCartImage"
            android:layout_marginTop="8dp"
            android:text="@string/product_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productCartName"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/product_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FBB503"
            android:textSize="26sp" />


        <TextView
            android:id="@+id/productCartDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productCartPrice"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/product_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8F8F84"
            android:textSize="14sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
